syntax = "proto3";
package music;
option go_package = "sb-cloud/player-ms-api";


import "google/protobuf/empty.proto";
import "google/api/validate.proto";
import "google/protobuf/duration.proto";


// Playlist

message Playlist {
    uint64 ID = 1 [(validate.rules).uint64.gt = 0];
    string    Name = 2 [(validate.rules).string.min_len = 1];
    int64    CreatedAt = 3 [(validate.rules).message.required = true];
    int64 UpdatedAt =  4 [(validate.rules).message.required = true];
}

message PlaylistAll {
  repeated  Playlist data = 1;
}

message PlaylistAddSongRequest{
  uint64 PlaylistID = 1 [(validate.rules).uint64.gt = 0];
  uint64 SongID = 2 [(validate.rules).uint64.gt = 0];
}

message GetByIdPlaylistRequest{
  uint64 ID = 1 [(validate.rules).uint64.gt =0];
}

message CreatePlaylistRequest{
  string    Name = 1 [(validate.rules).string.min_len = 1];
  string Description = 2 [(validate.rules).string.min_len = 1];
}

message UpdatePlaylistRequest{
  uint64 ID = 1 [(validate.rules).uint64.gt =0];
  string    Name = 2 [(validate.rules).string.min_len = 1];
  string Description = 3 [(validate.rules).string.min_len = 1];
}

message DeletePlaylistRequest{
  uint64 ID = 1 [(validate.rules).uint64.gt =0];
}

message GetPlaylistSongsRequest{
  uint64 PlaylistID = 1 [(validate.rules).uint64.gt = 0];
}

// Song
message Song {
  uint64 ID = 1 [(validate.rules).uint64.gt = 0];
  string    Name = 2 [(validate.rules).string.min_len = 1];
  string Description = 3 [(validate.rules).string.min_len = 1];
  google.protobuf.Duration Duration = 4 [(validate.rules).message.required = true];
}

message SongAll {
  repeated  Song data = 1;
}

message SongGetNextRequest{
  uint64 PlaylistID = 1 [(validate.rules).uint64.gt = 0];
  uint64 SongID = 2 [(validate.rules).uint64.gt = 0];
}

message SongGetPrevRequest{
  uint64 PlaylistID = 1 [(validate.rules).uint64.gt = 0];
  uint64 SongID = 2 [(validate.rules).uint64.gt = 0];
}

message GetByIdSongRequest{
  uint64 ID = 1 [(validate.rules).uint64.gt =0];
}

message CreateSongRequest{
  string    Name = 1 [(validate.rules).string.min_len = 1];
  string Description = 2 [(validate.rules).string.min_len = 1];
  google.protobuf.Duration Duration = 3 [(validate.rules).message.required = true];
}

message UpdateSongRequest{
  uint64 ID = 1 [(validate.rules).uint64.gt =0];
  string    Name = 2 [(validate.rules).string.min_len = 1];
  string Description = 3 [(validate.rules).string.min_len = 1];
  google.protobuf.Duration Duration = 4 [(validate.rules).message.required = true];
}

message ChangePlayingSongRequest{
  uint64 ID = 1 [(validate.rules).uint64.gt =0];
  bool Playing = 2;
}

message DeleteSongRequest{
  uint64 ID = 1 [(validate.rules).uint64.gt =0];
}

service MusicService {
  // Возвращает список плейлистов
  rpc GetAllPlaylist(google.protobuf.Empty) returns(PlaylistAll);

  // Добавляет песню в плейлист
  rpc PlaylistAddSong(PlaylistAddSongRequest) returns(google.protobuf.Empty);

  // Получает плейлист по Id
  rpc GetByIdPlaylist(GetByIdPlaylistRequest) returns(Playlist);

  // Создает плейлист
  rpc CreatePlaylist(CreatePlaylistRequest) returns(google.protobuf.Empty);

  // Обновляет плейлист
  rpc UpdatePlaylist(UpdatePlaylistRequest) returns(Playlist);

  // Удаляет плейлист
  rpc DeletePlaylist(DeletePlaylistRequest) returns(google.protobuf.Empty);

  // Получает список песен плейлиста
  rpc GetPlaylistSongs(GetPlaylistSongsRequest) returns(SongAll);



  // Возвращает список песен
  rpc GetAllSong(google.protobuf.Empty) returns(SongAll);

  // Получает песню по Id
  rpc GetByIdSong(GetByIdSongRequest) returns(Song);

  // Создает песню
  rpc CreateSong(CreateSongRequest) returns(google.protobuf.Empty);

  // Меняет состояние `playing` в песне
  rpc ChangePlayingSong(ChangePlayingSongRequest) returns(google.protobuf.Empty);

  // Получаем следующую песню
  rpc SongGetNext(SongGetNextRequest) returns(Song);

  // Получаем предыдущую песню
  rpc SongGetPrev(SongGetPrevRequest) returns(Song);

  // Обновляет песню
  rpc UpdateSong(UpdateSongRequest) returns(Song);

  // Удаляет песню
  rpc DeleteSong(DeleteSongRequest) returns(google.protobuf.Empty);

}



